--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"test": "vitest"
 	},
 	"devDependencies": {
+		"@notionhq/client": "^1.0.4",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@testing-library/jest-dom": "^5.16.4",
