--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"test": "vitest"
+		"test": "vitest",
+		"generate": "export $(grep -v '^#' .env | xargs) && openapi-typescript \"$VITE_SUPABASE_URL/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVlaXZ6b2xmZ2NvbWVrYWllc3ZvIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NTM3MjEwMjksImV4cCI6MTk2OTI5NzAyOX0.L-zC0bB2T4cgWk4O11IcueyUDJ5-cV0Vks8CdK1cK-o\" --output src/lib/supabase.d.ts"
 	},
 	"devDependencies": {
 		"@notionhq/client": "^1.0.4",
 		"@poppanator/sveltekit-svg": "^0.3.2",
+		"@supabase/supabase-js": "^1.35.3",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@testing-library/jest-dom": "^5.16.4",
@@ -29,6 +31,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"jsdom": "^19.0.0",
+		"openapi-typescript": "^5.3.0",
 		"postcss": "^8.4.14",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
