--- a/package.json
+++ b/package.json
@@ -11,10 +11,9 @@
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"test": "vitest",
-		"generate": "export $(grep -v '^#' .env | xargs) && openapi-typescript \"$VITE_SUPABASE_URL/rest/v1/?apikey=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVlaXZ6b2xmZ2NvbWVrYWllc3ZvIiwicm9sZSI6ImFub24iLCJpYXQiOjE2NTM3MjEwMjksImV4cCI6MTk2OTI5NzAyOX0.L-zC0bB2T4cgWk4O11IcueyUDJ5-cV0Vks8CdK1cK-o\" --output src/lib/supabase.d.ts"
+		"generate": "export $(grep -v '^#' .env | xargs) && openapi-typescript \"$VITE_SUPABASE_URL/rest/v1/?apikey=$VITE_SUPABASE_ANON_KEY\" --output src/lib/supabase.d.ts"
 	},
 	"devDependencies": {
-		"@notionhq/client": "^1.0.4",
 		"@poppanator/sveltekit-svg": "^0.3.2",
 		"@supabase/supabase-js": "^1.35.3",
 		"@sveltejs/adapter-vercel": "next",
@@ -22,7 +21,6 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/svelte": "^3.1.1",
 		"@testing-library/user-event": "^14.2.0",
-		"@types/dotenv-flow": "^3.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.25.0",
 		"@typescript-eslint/parser": "^5.25.0",
 		"autoprefixer": "^10.4.7",
@@ -42,7 +40,6 @@
 		"tailwindcss": "^3.0.24",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.2",
-		"vite-plugin-markdown": "^2.0.2",
 		"vitest": "^0.12.9",
 		"vitest-svelte-kit": "^0.0.6"
 	},
