--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,11 +28,8 @@ jobs:
         run: npm ci
       - name: build
         env:
-          VITE_FIREBASE_PROJECT_ID: ${{ secrets.VITE_FIREBASE_PROJECT_ID}}
-          VITE_FIREBASE_API_KEY: ${{ secrets.VITE_FIREBASE_API_KEY}}
-          VITE_FIREBASE_AUTH_DOMAIN: ${{ secrets.VITE_FIREBASE_AUTH_DOMAIN}}
-          FIREBASE_ADMIN_CLIENT_EMAIL: ${{ secrets.FIREBASE_ADMIN_CLIENT_EMAIL}}
-          FIREBASE_ADMIN_PRIVATE_KEY: ${{ secrets.FIREBASE_ADMIN_PRIVATE_KEY}}
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL}}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY}}
         run: npm run build
       - name: headless tests
         run: npm test
