💚  I guess we need those in the test step too

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,4 +32,7 @@ jobs:
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY}}
         run: npm run build
       - name: headless tests
+        env:
+          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL}}
+          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY}}
         run: npm test
