--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"jsdom": "^19.0.0",
+		"jwt-decode": "^3.1.2",
 		"openapi-typescript": "^5.4.0",
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.0",
@@ -39,7 +40,7 @@
 		"tailwindcss": "^3.1.2",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.3",
-		"vitest": "^0.14.2",
+		"vitest": "^0.15.0",
 		"vitest-svelte-kit": "^0.0.6"
 	},
 	"type": "module",
