--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "techy-cat",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"scripts": {
 		"dev": "svelte-kit dev",
 		"build": "svelte-kit build",
@@ -40,6 +40,7 @@
 		"tailwindcss": "^3.1.2",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.3",
+		"unique-names-generator": "^4.7.1",
 		"vitest": "^0.15.0",
 		"vitest-svelte-kit": "^0.0.6"
 	},
