--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/svelte": "^3.1.3",
 		"@testing-library/user-event": "^14.2.1",
+		"@types/dotenv-flow": "^3.2.0",
 		"@typescript-eslint/eslint-plugin": "^5.28.0",
 		"@typescript-eslint/parser": "^5.28.0",
 		"autoprefixer": "^10.4.7",
+		"dotenv-flow": "^3.2.0",
 		"eslint": "^8.18.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
