--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
 	"name": "techy-cat",
 	"version": "0.2.0",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
+		"dev": "vite dev",
+		"build": "vite build",
 		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
+		"preview": "vite preview",
+		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -15,36 +16,35 @@
 	},
 	"devDependencies": {
 		"@poppanator/sveltekit-svg": "^0.3.4",
-		"@supabase/supabase-js": "^1.35.3",
+		"@supabase/supabase-js": "^1.35.4",
 		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/svelte": "^3.1.3",
-		"@testing-library/user-event": "^14.2.1",
+		"@testing-library/user-event": "^14.3.0",
 		"@types/dotenv-flow": "^3.2.0",
-		"@typescript-eslint/eslint-plugin": "^5.28.0",
-		"@typescript-eslint/parser": "^5.28.0",
+		"@typescript-eslint/eslint-plugin": "^5.30.7",
+		"@typescript-eslint/parser": "^5.30.7",
 		"autoprefixer": "^10.4.7",
 		"dotenv-flow": "^3.2.0",
-		"eslint": "^8.18.0",
+		"eslint": "^8.20.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"jsdom": "^20.0.0",
 		"jwt-decode": "^3.1.2",
-		"openapi-typescript": "^5.4.0",
+		"openapi-typescript": "^5.4.1",
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
-		"prettier-plugin-tailwindcss": "^0.1.11",
-		"svelte": "^3.48.0",
-		"svelte-check": "^2.7.2",
+		"prettier-plugin-tailwindcss": "^0.1.12",
+		"svelte": "^3.49.0",
+		"svelte-check": "^2.8.0",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.3",
+		"tailwindcss": "^3.1.6",
 		"tslib": "^2.4.0",
 		"typescript": "^4.7.4",
 		"unique-names-generator": "^4.7.1",
-		"vitest": "^0.15.1",
-		"vitest-svelte-kit": "^0.0.6"
+		"vitest": "^0.18.1"
 	},
 	"type": "module",
 	"engines": {
