✅  scaffold Playwright E2E tests

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,10 @@ yarn-error.log*
 # cypress
 cypress/videos
 cypress/screenshots
+# playwright
+/test-results/
+/playwright-report/
+/playwright/.cache/
 
 # build
 .vercel_build_output
