--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"jsdom": "^20.0.0",
 		"jwt-decode": "^3.1.2",
 		"openapi-typescript": "^5.4.1",
+		"motion": "^10.13.1",
 		"postcss": "^8.4.14",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
