✅  test what an logged-in user should see!

--- a/.github/workflows/playwright.yaml
+++ b/.github/workflows/playwright.yaml
@@ -22,6 +22,7 @@ jobs:
           VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL }}
           VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY }}
           VITE_STRIPE_PUBLISHABLE_KEY: ${{ secrets.VITE_STRIPE_PUBLISHABLE_KEY }}
+          SUPABASE_PLAYWRIGHT_USER_PASSWORD: ${{ secrets.SUPABASE_PLAYWRIGHT_USER_PASSWORD }}
           STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
         run: npx playwright test
       - uses: actions/upload-artifact@v3
