✨  add a couple animations with lottie

--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
 		"build": "vite build",
 		"package": "svelte-kit package",
 		"preview": "vite preview",
-		"prepare": "svelte-kit sync",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
@@ -33,8 +32,9 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"jsdom": "^20.0.0",
 		"jwt-decode": "^3.1.2",
-		"openapi-typescript": "^5.4.1",
+		"lottie-web": "^5.9.6",
 		"motion": "^10.13.3",
+		"openapi-typescript": "^5.4.1",
 		"postcss": "^8.4.16",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.0",
