♻️  switch to the new sveltekit way to import env vars

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,11 +28,11 @@ jobs:
         run: npm ci
       - name: build
         env:
-          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL}}
-          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY}}
+          PUBLIC_SUPABASE_URL: ${{ secrets.PUBLIC_SUPABASE_URL}}
+          PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.PUBLIC_SUPABASE_ANON_KEY}}
         run: npm run build
       - name: headless tests
         env:
-          VITE_SUPABASE_URL: ${{ secrets.VITE_SUPABASE_URL}}
-          VITE_SUPABASE_ANON_KEY: ${{ secrets.VITE_SUPABASE_ANON_KEY}}
+          PUBLIC_SUPABASE_URL: ${{ secrets.PUBLIC_SUPABASE_URL}}
+          PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.PUBLIC_SUPABASE_ANON_KEY}}
         run: npm test
