--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"test": "vitest",
-		"generate": "export $(grep -v '^#' .env | xargs) && openapi-typescript \"$VITE_SUPABASE_URL/rest/v1/?apikey=$VITE_SUPABASE_ANON_KEY\" --output src/lib/supabase.d.ts"
+		"generate": "export $(grep -v '^#' .env | xargs) && openapi-typescript \"$PUBLIC_SUPABASE_URL/rest/v1/?apikey=$PUBLIC_SUPABASE_ANON_KEY\" --output src/lib/supabase.d.ts"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.25.0",
