--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"@playwright/test": "^1.26.1",
 		"@poppanator/sveltekit-svg": "^1.0.0",
 		"@supabase/supabase-js": "^1.35.7",
-		"@sveltejs/adapter-vercel": "next",
+		"@sveltejs/adapter-auto": "next",
 		"@sveltejs/kit": "next",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/svelte": "^3.2.2",
@@ -37,6 +37,8 @@
 		"motion": "^10.14.2",
 		"openapi-typescript": "^5.4.1",
 		"playwright": "^1.26.1",
+		"playwright-aws-lambda": "^0.9.0",
+		"playwright-core": "^1.26.1",
 		"postcss": "^8.4.17",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.1",
