--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
 	"devDependencies": {
 		"@playwright/test": "^1.26.1",
 		"@poppanator/sveltekit-svg": "^1.0.0",
+		"@sparticuz/chromium": "107.0.0",
 		"@supabase/supabase-js": "^1.35.7",
-		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-vercel": "next",
 		"@sveltejs/kit": "next",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/svelte": "^3.2.2",
@@ -36,13 +37,11 @@
 		"lottie-web": "^5.9.6",
 		"motion": "^10.14.2",
 		"openapi-typescript": "^5.4.1",
-		"playwright": "^1.26.1",
-		"playwright-aws-lambda": "^0.9.0",
-		"playwright-core": "^1.26.1",
 		"postcss": "^8.4.17",
 		"prettier": "^2.7.1",
 		"prettier-plugin-svelte": "^2.7.1",
 		"prettier-plugin-tailwindcss": "^0.1.13",
+		"puppeteer": "^18.2.1",
 		"seedrandom": "^3.0.5",
 		"svelte": "^3.50.1",
 		"svelte-check": "^2.9.1",
@@ -58,6 +57,6 @@
 		"node": "16.x"
 	},
 	"volta": {
-		"node": "16.17.0"
+		"node": "16.17.1"
 	}
 }
